unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Posting_Period__c.field-meta.xml
<CustomField>
    <fullName>Posting_Period__c</fullName>
    <formula>TEXT(MONTH(abacus__Transaction_Date__c)) &amp; " " &amp; TEXT(YEAR(abacus__Transaction_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Period</label>
    <type>Text</type>
</CustomField>