unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Receivable_Natural_Account__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Natural_Account__c</fullName>
    <label>Receivable Natural Account</label>
    <length>25</length>
    <type>Text</type>
</CustomField>