unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>Refund_Type__c</fullName>
    <label>Refund Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>