unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>