unpackaged/main/default/objects/abacus__Ledger_Entry__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>150</length>
    <type>Text</type>
</CustomField>