unpackaged/main/default/objects/abacus__Ledger_Entry__c/listViews/abacus__All.listView-meta.xml
<ListView>
    <fullName>abacus__All</fullName>
    <columns>NAME</columns>
    <columns>abacus__Transaction_Date__c</columns>
    <columns>abacus__GL_Code__c</columns>
    <columns>abacus__Debit_Amount__c</columns>
    <columns>abacus__Credit_Amount__c</columns>
    <columns>abacus__Amount__c</columns>
    <columns>abacus__Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>abacus__Amount__c</field>
        <operation>equals</operation>
        <value>200000</value>
    </filters>
    <label>All</label>
</ListView>