unpackaged/main/default/objects/abacus__Ledger_Entry__c/listViews/Unposted_Ledger_Entries.listView-meta.xml
<ListView>
    <fullName>Unposted_Ledger_Entries</fullName>
    <columns>abacus__Posting_Status__c</columns>
    <columns>NAME</columns>
    <columns>abacus__Adjustment__c</columns>
    <columns>abacus__Credit_Amount__c</columns>
    <columns>abacus__Debit_Amount__c</columns>
    <columns>abacus__Debit_Credit__c</columns>
    <columns>abacus__Fulfills_A_Pledge__c</columns>
    <columns>abacus__GL_Code__c</columns>
    <columns>abacus__General_Accounting_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Posting_Period__c</columns>
    <columns>NS_Cash_Sale_Integration_Status_code__c</columns>
    <columns>NS_Cash_Sale_Integration_DateTime__c</columns>
    <columns>abacus__Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>abacus__Posting_Status__c</field>
        <operation>notEqual</operation>
        <value>Posted</value>
    </filters>
    <filters>
        <field>NS_Cash_Sale_Integration_Status_code__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </filters>
    <filters>
        <field>NS_Cash_Sale_Integration_DateTime__c</field>
        <operation>lessOrEqual</operation>
        <value>6/15/2022 10:18 AM</value>
    </filters>
    <label>Unposted Ledger Entries</label>
</ListView>